--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -316,7 +316,7 @@
           href: store-developer-package-update.md
         - name: Update non-Store published apps from your code
           href: non-store-developer-updates.md
-    - name: MSIX Persistent Identity
+    - name: MSIX persistent identity
       href: package/persistent-identity.md
     - name: Deploy MSIX Core for Windows 10 1703 and earlier 
       items: 
