--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -10,6 +10,8 @@
       href: msix-container.md     
     - name: Understanding how MSIX packages run on Windows
       href: desktop/desktop-to-uwp-behind-the-scenes.md
+    - name: Flexible virtualization
+      href: desktop/flexible-virtualization.md
     - name: MSIX package signing
       items:
         - name: Overview
