--- a/msix-src/index.yml
+++ b/msix-src/index.yml
@@ -100,6 +100,8 @@ additionalContent:
               url: desktop/managing-your-msix-deployment-enterprise.md
             - text: Distribute your MSIX in a retail environment
               url: desktop/managing-your-msix-deployment-retail.md
+            - text: Create a shared runtime container
+              url: manage/shred-package-container.md
         # Card
         - title: Related resources
           links:
