Updating feature list and renaming supported platforms page

--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -4,7 +4,7 @@
       href: index.yml  
     - name: What is MSIX?
       href: overview.md
-    - name: Supported platforms
+    - name: Features and supported platforms 
       href: supported-platforms.md
     - name: MSIX Container
       href: msix-container.md     
