--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -1,5 +1,8 @@
 - name: MSIX
   items: 
+    - name: App-V vs MSIX
+      href: ../../../AppVvsMSIX/comparisonofappvwithmsix.md
+      displayName: "App-V MSIX Comparison "
     - name: Overview
       href: index.yml  
     - name: What is MSIX?
