--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -211,6 +211,9 @@
           href: desktop/vs-package-overview.md
         - name: Set up your desktop app for packaging in Visual Studio
           href: desktop/desktop-to-uwp-packaging-dot-net.md
+        - name: App Streaming in Visual Studio
+          href: ./desktop/appstreaminginvisualstudio.md
+          displayName: Azure Virtual Desktop, App Streaming, Visual Studio, Extension
         - name: Package a desktop or UWP app in Visual Studio
           href: package/packaging-uwp-apps.md
         - name: Sign packages with Azure Key Vault
