--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -218,7 +218,7 @@
         - name: Optimize binaries with native images
           href: desktop/desktop-to-uwp-r2r.md
         - name: App Attach from Visual Studio
-          href: ./desktop/appattachfromvisualstudio.md
+          href: desktop/appattachfromvisualstudio.md
           displayName: Azure Virtual Desktop, App Streaming, Visual Studio, Extension
     - name: MSIX and CI/CD pipelines
       items:
