--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -136,7 +136,7 @@
       items: 
         - name: Create an MSIX package from any desktop installer
           href: packaging-tool/create-app-package.md
-        - name: Package Analyzer
+        - name: "Analyze and resolve runtime issues "
           href: ./packaging-tool/package-analyzer.md
           displayName: "auto detect fixes "
         - name: Conversion with the command line
