Initial updates for app attach

--- a/msix-src/index.yml
+++ b/msix-src/index.yml
@@ -71,6 +71,8 @@ additionalContent:
               url: packaging-tool/quick-create-vm.md
             - text: Setup instructions for remote machine conversions
               url: packaging-tool/remote-conversion-setup.md
+            - text: App Attach from Visual Studio
+              url: /desktop/app-attach-from-visualstudio
         # Card
         - title: Package
           links:
