--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -374,8 +374,10 @@
       href: desktop\tamper-protection.md
     - name: Reset and Repair MSIX Apps
       href: desktop\managing-your-msix-reset-and-repair.md
-- name: MSIX validation and troubleshooting
+- name: MSIX validation, testing, and troubleshooting
   items: 
+    - name: Overview
+      href: desktop/validation-overview.md
     - name: Troubleshooting packaging, deployment, and query of Windows apps
       href: /windows/win32/appxpkg/troubleshooting?context=/windows/msix/render
     - name: Troubleshoot runtime issues in an MSIX Container
